--- a/theme/templates/tag.html
+++ b/theme/templates/tag.html
@@ -3,7 +3,11 @@
 {% block title %}{{ tag }}{% endblock %}
 
 {% block content %}
-  <h1>{{ tag }} {% if articles_page.number > 1 %}<small>({{ articles_page.number }}.)</small>{% endif %}</h1>
+  <h1>Zápisník</h1>
+  <p class="intro">O cestování s batohem na zádech. Povídky i příběhy ze života.
+                   Fotografie ze zapadlých koutů světa i Česka.</p>
+
+  <h2>{{ tag }} {% if articles_page.number > 1 %}<small>({{ articles_page.number }}.)</small>{% endif %}, <a href="{{ SITEURL }}">&#10154;</a></h2>
 
   {% include "_articles.html" %}
 {% endblock %}
