--- a/theme/templates/tags.html
+++ b/theme/templates/tags.html
@@ -3,7 +3,11 @@
 {% block title %}Nálepky{% endblock %}
 
 {% block content %}
-  <h1>Nálepky</h1>
+  <h1>Zápisník</h1>
+  <p class="intro">O cestování s batohem na zádech. Povídky i příběhy ze života.
+                   Fotografie ze zapadlých koutů světa i Česka.</p>
+
+  <h2>Nálepky, <a href="{{ SITEURL }}">&#10154;</a></h2>
 
   <p>
   {%- for tag, articles in tags|sort %}
