--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -6,7 +6,7 @@
   <meta name="viewport"
         content="width=device-width, initial-scale=1.0">
 
-  <link rel="alternate" type="application/atom+xml" title="RSS kanál" href="{{SITEURL}}/feeds/all.atom.xml"/>
+  <link rel="alternate" type="application/atom+xml" title="RSS kanál" href="{{SITEURL}}/feeds/{% block rss %}all{% endblock %}.atom.xml"/>
 
   <link rel="stylesheet" href="{{ SITEURL }}/theme/css/reset.css">
   <link rel="stylesheet" href="{{ SITEURL }}/theme/css/base.css">
@@ -41,7 +41,17 @@
 
     <div class="footer">
       Zapisuje <a href="https://www.judakaleta.cz/">Juda Kaleta</a> (<a href="mailto:juda.kaleta@gmail.com">@</a>).<br>
-      <small>Veškerý obsah stránek je publikován pod licencí <a href="http://creativecommons.org/licenses/by-nc/3.0/deed.cs">Creative Commons BY-NC</a>.</small>
+      <small>Veškerý obsah stránek je publikován pod licencí <a href="http://creativecommons.org/licenses/by-nc/3.0/deed.cs">Creative Commons BY-NC</a>.<br>
+        
+        <a href="http://zapisnik.glor.cz/archiv.html">Archiv</a> | 
+        <a href="http://zapisnik.glor.cz/kategorie.html">Kategorie</a> | 
+        <a href="http://zapisnik.glor.cz/nalepky.html">Nálepky</a> |
+        <a href="http://zapisnik.glor.cz/sitemap.xml">Sitemap</a> |
+        <a href="http://zapisnik.glor.cz/feeds/all.atom.xml">RSS</a>
+        {% block footer %}{% endblock %}
+        
+      
+      </small>
     </div>
   </div>
 </div>
