--- a/theme/templates/categories.html
+++ b/theme/templates/categories.html
@@ -7,7 +7,7 @@
   <p class="intro">O cestování s batohem na zádech. Povídky i příběhy ze života.
                    Fotografie ze zapadlých koutů světa i Česka.</p>
 
-  <h2>Kategorie</h2>
+  <h2>Kategorie, <a href="{{ SITEURL }}">&#10154;</a></h2>
   
   <ul class="index">
 {% for category, articles in categories %}
