--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -33,6 +33,7 @@
 
   ga('create', 'UA-2063092-11', 'glor.cz');
   ga('send', 'pageview');
+  {% block ga_extra %}{% endblock %}
 </script>
 
 <div class="wrapper">
