--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -35,6 +35,20 @@
   ga('create', 'UA-2063092-11', 'glor.cz');
   ga('send', 'pageview', {{ '{' }}{% block ga_extra %}{% endblock %}{{ '}' }});
 </script>
+  
+<script type="application/ld+json">
+  {
+    "@context" : "http://schema.org",
+    "@type" : "Person",
+    "name" : "Juda Kaleta",
+    "url" : "http://zapisnik.glor.cz/",
+    "sameAs" : [
+      "https://www.facebook.com/juda.kaleta",
+      "https://www.linkedin.com/in/yettycz",
+      "https://plus.google.com/+JudaKaleta"
+    ]
+  }
+</script>
 
 <div class="wrapper">
   <div class="container">
@@ -45,7 +59,7 @@
       <small>Veškerý obsah stránek je publikován pod licencí <a href="http://creativecommons.org/licenses/by-nc/3.0/deed.cs">Creative Commons BY-NC</a>.<br>
         
         <a href="http://zapisnik.glor.cz/archiv.html">Archiv</a> | 
-        <a href="http://zapisnik.glor.cz/search.html">Vyhledávání</a> |
+        <a href="http://zapisnik.glor.cz/pages/search.html">Vyhledávání</a> |
         <a href="http://zapisnik.glor.cz/kategorie.html">Kategorie</a> | 
         <a href="http://zapisnik.glor.cz/nalepky.html">Nálepky</a> |
         <a href="http://zapisnik.glor.cz/sitemap.xml">Sitemap</a> |
